# AudioClipTool

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirement_doc.md
.github/workflows/: deploy.yml
static/: index.html
